[package]
name = "xclient"
version = "0.1.0"
authors = ["Stephan Creutz <stephan.cr@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0"
bytes = "1"
enumflags2 = "0.7"
tokio = { version = "1.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.6", features = ["codec"] }
