[package]
name = "xclient"
version = "0.1.0"
authors = ["Stephan Creutz <stephan.cr@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0"
bytes = "1"
clap = { version = "2", default-features = false }
colored = "2"
enumflags2 = "0.7"
num-traits = "0.2"
num-derive = "0.3"
tokio = { version = "1.0", default-features = false, features = ["io-util", "macros", "net", "rt", "time"] }
tokio-util = { version = "0.6", features = ["codec"] }

[profile.release]
lto = true
panic = 'abort'
