[package]
name = "xclient"
version = "0.1.0"
authors = ["Stephan Creutz <stephan.cr@gmx.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ascii = "1.0"
bytes = "1"
clap = { version = "4.5", default-features = false, features = ["cargo", "std", "deprecated", "help"] }
colored = "2"
enumflags2 = "0.7"
num-traits = "0.2"
num-derive = "0.4"
tokio = { version = "1.0", default-features = false, features = ["io-util", "macros", "net", "rt", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

[profile.release]
lto = true
panic = 'abort'
